# LSD

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  class_diagram.md
depedencies/src/: glad.c
dependencies/include/glad/: glad.h
header/: audio.h  background.h  block_component.h  bounding_box_component.h  camera.h  component.h  control_component.h  dependencies.h  draw_component.h  game_manager.h  game_object.h  macro.h  mesh.h  model.h  model_component.h  move_to_component.h  render_object.h  shader.h  spin_component.h  texture.h  timer.h  window.h
resources/models/barrel/: barrel.gltf
resources/models/beam/: beam.gltf
resources/models/coin/: coin.gltf
resources/models/lane/: lane.gltf
resources/models/player/: player.gltf
resources/shaders/: background_fragment.glsl  background_vertex.glsl  model_fragment.glsl  model_vertex.glsl
src/: Audio.cpp  BlockComponent.cpp  BoundingBoxComponent.cpp  Camera.cpp  Component.cpp  ControlComponent.cpp  DrawComponent.cpp  GameObject.cpp  Mesh.cpp  Model.cpp  ModelComponent.cpp  MoveToComponent.cpp  RenderObject.cpp  Shader.cpp  SpinComponent.cpp  Texture.cpp  Timer.cpp  Window.cpp  game_manager.cpp  main.cpp
